WCI Refactoring - reuse existing crafting data (and added caching for it) - moved WCI commands to WEModule commands - centralized wynnbuilder decoding